--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf ./dist && webpack --config webpack.config.js --mode development"
+    "build": "rm -rf ./dist && webpack --config webpack.config.js --mode development",
+    "serve": "node-dev --no-notify ./dist/server.js"
   },
   "devDependencies": {
     "@types/webpack": "^4.4.26",
+    "node-dev": "^3.1.3",
     "ts-loader": "^5.3.3",
     "tslint": "^5.15.0",
     "typescript": "^3.4.1",
