--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
   "license": "MIT",
   "scripts": {
     "build": "rm -rf ./dist && webpack --config webpack.config.js --mode development",
-    "serve": "node-dev --no-notify ./dist/server.js"
+    "serve": "node-dev --no-notify ./dist/server.js",
+    "test": "mocha-webpack --recursive --webpack-config webpack.config.js --mode development 'tests/unit/**/*.spec.ts'",
+    "test:watch": "yarn test --watch",
+    "dist": "rm -rf ./dist && webpack --config webpack.config.js --mode production"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
     "@types/webpack": "^4.4.26",
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "mocha-webpack": "^2.0.0-beta.0",
     "node-dev": "^3.1.3",
     "ts-loader": "^5.3.3",
     "tslint": "^5.15.0",
