Fixes for windows and @ path naming
On Windows (at least in git-for-windows bash shell) the yarn test
target needed the paths not to be quoted. Worked on Mac but it's
better this way anyway, as quotes are needed in shells, not JSON ;)

Also added the tsconfig changes to let the `@/...` syntax work
to name the source dir, which was only needed for the tests/**/*.ts
files for some reason.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf ./dist && webpack --config webpack.config.js --mode development",
+    "build": "webpack --config webpack.config.js --mode development",
     "serve": "node-dev --no-notify ./dist/server.js",
-    "test": "mocha-webpack --recursive --webpack-config webpack.config.js --mode development 'src/**/*.spec.ts' 'tests/unit/**/*.spec.ts'",
+    "test": "mocha-webpack --recursive --webpack-config webpack.config.js --mode development src/**/*.spec.ts tests/unit/**/*.spec.ts",
     "test:watch": "yarn test --watch",
     "dist": "rm -rf ./dist && webpack --config webpack.config.js --mode production"
   },
