--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/chai-http": "^4.2.0",
+    "@types/express-winston": "^3.0.1",
     "@types/mocha": "^5.2.6",
     "@types/webpack": "^4.4.26",
+    "@types/winston": "^2.4.4",
     "chai": "^4.1.2",
     "chai-http": "^4.2.1",
     "mocha": "^5.2.0",
@@ -30,6 +32,8 @@
   },
   "dependencies": {
     "@types/express": "^4.16.1",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "express-winston": "^3.1.0",
+    "winston": "^3.2.1"
   }
 }
